# molecular-simulation-tools

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sphinx-reading-durations.json
.github/workflows/: ci-lint.yml  ci-test.yml  sphinx.yml
_modules/: index.html
_modules/molecular_simulation_tools/: _version.html  connectivity.html  geometry.html  io.html  neb.html  orca.html  properties.html  utils.html
_sources/: index.rst.txt
_sources/api/: index.rst.txt
_sources/api/molecular_simulation_tools/: index.rst.txt
_sources/api/molecular_simulation_tools/connectivity/: index.rst.txt
_sources/api/molecular_simulation_tools/geometry/: index.rst.txt
_sources/api/molecular_simulation_tools/io/: index.rst.txt
_sources/api/molecular_simulation_tools/neb/: index.rst.txt
_sources/api/molecular_simulation_tools/orca/: index.rst.txt
_sources/api/molecular_simulation_tools/properties/: index.rst.txt
_sources/api/molecular_simulation_tools/utils/: index.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/molecular_simulation_tools/: index.rst.txt
_sources/autoapi/molecular_simulation_tools/_version/: index.rst.txt
_sources/autoapi/molecular_simulation_tools/geometry/: index.rst.txt
_sources/autoapi/molecular_simulation_tools/io/: index.rst.txt
_sources/autoapi/molecular_simulation_tools/neb/: index.rst.txt
_sources/autoapi/molecular_simulation_tools/utils/: index.rst.txt
api/: index.html
api/molecular_simulation_tools/: index.html
api/molecular_simulation_tools/connectivity/: index.html
api/molecular_simulation_tools/geometry/: index.html
api/molecular_simulation_tools/io/: index.html
api/molecular_simulation_tools/neb/: index.html
api/molecular_simulation_tools/orca/: index.html
api/molecular_simulation_tools/properties/: index.html
api/molecular_simulation_tools/utils/: index.html
autoapi/: index.html
autoapi/molecular_simulation_tools/: index.html
autoapi/molecular_simulation_tools/_version/: index.html
autoapi/molecular_simulation_tools/geometry/: index.html
autoapi/molecular_simulation_tools/io/: index.html
autoapi/molecular_simulation_tools/neb/: index.html
autoapi/molecular_simulation_tools/utils/: index.html
docs/: conf.py  requirements.txt
molecular_simulation_tools/: __init__.py  _version.py  connectivity.py  geometry.py  io.py  neb.py  orca.py  properties.py  utils.py
tests/: test_geometry.py  test_neb.py  test_orca.py  test_utils.py
