[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "molecular_simulation_tools/_version.py"

[project]
name = "molecular_simulation_tools"
dynamic = ["version"]
authors = [
    { name = "Tobias Dijkhuis" },
]
maintainers = [
	{name="Tobias Dijkhuis" },
]
license = {text = "GNU GPLv3"}
description = "A collection of tools for molecular simulations."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "ase", "numpy",
]

[project.urls]
Repository = "https://github.com/TobiasDijkhuis/molecular-simulation-tools"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "D", "E", "B", 
    "ANN001", "ANN201", 
    "ARG", 
    "RUF100", 
    "UP", 
    "DOC", "D",
    "SIM", "S", 
    "EM", 
    "ERA", 
    "N", 
    "PERF", 
    "ICN", 
    "TID", 
    "PTH", 
    "LOG", 
    "TC", 
    "PLC", "PLR", "PLE"
]
extend-ignore = [
    "E501", "E731", "E741", "E402", "E203", "E204",
    "SIM108", "SIM102", 
    "S603", "S607", "S404", "S602", 
    "PLR2004", "PLR0911", "PLR1702", "PLR0912", "PLR0913", "PLR0915", "PLR0917", "PLR0914", "PLR0904"
]
pycodestyle.max-doc-length = 100
pydocstyle.convention = 'numpy'
preview = true


[tool.ruff.lint.per-file-ignores]
# E402: Module level import not at top of file - normal for notebook-derived files
"notebooks/*.py" = ["E402"]
"*/__init__.py" = ["F401"]
"tests/*" = ["ANN001", "ANN201", "D", "ARG001", "PLR6301", "ARG002", "DOC", "S101", "B011", "PLC", "PLR"]

[[tool.mypy.overrides]]
module = ["numpy", "ase", "ase.*", "matplotlib", "matplotlib.*", "pytest", "znh5md"]
ignore_missing_imports = true

[tool.typos.default]
locale = "en-us"
extend-ignore-re = [
    # Ignore lines that end with `# spellchecker:disable-line`
    "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",
    # Ignore the line after `# spellchecker:ignore-next-line`:
    "(#|//)\\s*spellchecker:ignore-next-line\\n.*",
    # Ignore blocks between `# spellchecker:off` and `# spellchecker:on`
    "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on",
]
extend-ignore-identifiers-re = [
    "I[xyzXYZ]$",
    "Indx$",
    "indx$",

    # Multiple Fortran "PARAMETER"s
    "^PARAMETERs$",

    # np.arange
    "^arange$",

    # Ignore f then one or two chars indicating elemental abundances, e.g. fO.
    "^f.{1,2}$",
    
    # Ignore n and then one or two chars indicating index or density
    "^n.{1,2}$",
]

[tool.pymend]
output-style = "numpydoc"
exclude = "tests/"
force-multiline-docs-end-with-blank = true
force-docstrings = false
force-raises = 'per-type'
mode = 'check-only'

[[tool.ty.overrides]]
include = ["tests/"]

[tool.ty.overrides.rules]
possibly-missing-submodule = "ignore"

